Add student CRUD to student affairs module
